[tool.poetry]
name = "ssky"
version = "0.2.0"
description = "Simple bluesky client"
authors = ["SimpleSkyClient Project <simpleskypclient@gmail.com>"]
readme = "README.md"
license = "LICENSE"
homepage = "https://github.com/simpleskyclient/ssky"
repository = "https://github.com/simpleskyclient/ssky"
keywords = ["bluesky", "client"]
packages = [
    {include = "ssky", from = "src"},
    {include = "ssky_mcp", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
atproto = "^0.0.60"
pytest = "^8.3.4"
fastmcp = "^2.8.0"

[tool.poetry.scripts]
ssky = "ssky.main:main"
ssky-mcp-server = "ssky_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"