[tool.poetry]
name = "ssky"
version = "0.3.0"
description = "Simple bluesky client"
authors = ["SimpleSkyClient Project <simpleskypclient@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/simpleskyclient/ssky"
repository = "https://github.com/simpleskyclient/ssky"
keywords = ["bluesky", "client"]
packages = [
    {include = "ssky", from = "src"},
    {include = "ssky_mcp", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
atproto = "^0.0.68"
fastmcp = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
ssky = "ssky.main:main"
ssky-mcp-server = "ssky_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"