[project]
name = "ssky"
version = "1.0.0"
description = "Simple bluesky client"
authors = [
    {name = "SimpleSkyClient Project", email = "simpleskypclient@gmail.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["bluesky", "client"]
requires-python = ">=3.12,<3.15"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "atproto (>=0.0.68,<0.0.69)",
    "fastmcp (>=2.14.0,<3.0.0)",
]

[project.urls]
homepage = "https://github.com/simpleskyclient/ssky"
repository = "https://github.com/simpleskyclient/ssky"

[project.scripts]
ssky = "ssky.main:main"
ssky-mcp-server = "ssky_mcp.server:main"

[tool.poetry]
packages = [
    {include = "ssky", from = "src"},
    {include = "ssky_mcp", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
